add vm.hasComapctString and skip those tests which need -XX:+CompactStrings